# pse25

./: .gitignore  README.md  compose.backend.containerized.yaml  compose.backend.yaml  compose.coverage.yaml  compose.dev.yaml  compose.e2e.yaml  compose.prod.yaml  compose.test.yaml  compose.yaml  package-lock.json  package.json  run.dev.linux.sh  run.dev.sh  run.sh  run.test.linux.sh  run.tests.sh
.github/workflows/: test.yml
backend/: .dockerignore  .env.template  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.migrations  Dockerfile.test  Dockerfile.test.containerized  Rocket.toml
backend/migrations/2024-01-01-000000_initial_schema/: down.sql  up.sql
backend/migrations/2026-01-21-142113-0000_create_files/: up.sql
backend/migrations/2026-01-27-120000_add_metadata_definition_tables/: down.sql  up.sql
backend/migrations/2026-02-03-134416-0000_adjust-files/: down.sql  up.sql
backend/migrations/2026-02-03-142438-0000_rename-custom-metadata-files/: down.sql  up.sql
backend/migrations/2026-02-11-200256-0000_rework_metadata/: down.sql  up.sql
backend/migrations/2026-02-15-120000_add_topics_jsonb/: down.sql  up.sql
backend/migrations/2026-02-15-130000_create_topics_table/: down.sql  up.sql
backend/plugin_base/: pyproject.toml
backend/plugin_base/src/plugin_base/: plugin_base.py
backend/scripts/: run_coverage_with_failures.sh
backend/src/: error.rs  lib.rs  main.rs  schema.rs
backend/src/plugin_manager/: manager.rs  mod.rs  plugin.rs  python_bridge.rs
backend/src/plugin_manager/plugins/: ImportPluginHandler.py  metadata_yaml_export_plugin.py  metadata_yaml_import_plugin.py  plugin.py  plugin_base.py  plugin_runner.py
backend/src/plugin_manager/plugins/config/: plugins.yaml
backend/src/plugin_manager/plugins/example_plugins/: ImportPluginHandler.py  plugin_base.py
backend/src/plugin_manager/plugins/funktionsfähige_plugins/: metadata_yaml_export_plugin.txt  metadata_yaml_import_plugin.txt
backend/src/plugin_manager/plugins/plugin_examples/: DANGEROUS_DO_NOT_USE_delete_rest_plugin.py  append_42.py  append_plugin.py  compress.py  delete_export_files_only_plugin.py  delete_parts_of_data_set_plugin.py  delete_rest_plugin.py  foo.py  loop.py  mcap_compress_plugin.py  mcap_info_gzip_plugin.py  metadata_yaml_export.py  metadata_yaml_import_plugin.py  seed_test_data.py  seed_test_data_plugin.py
backend/src/routes/: database.rs  health_check.rs  logs.rs  mod.rs  plugins.rs  queries.rs
backend/src/storage/: entry.json  entry.rs  file_watcher.rs  metadata.rs  mod.rs  models.rs  parsing.rs  sequence.json  sequence.rs  storage_instance.rs  storage_manager.rs
backend/tests/: api.rs  database.rs  integration_test.rs  manager.rs  parsing.rs  plugin_manager.rs  search.rs  storage_integration.rs  trigger.rs
backend/tests/common/: mod.rs
frontend/: .dockerignore  Dockerfile  Dockerfile.playwright  nuxt.config.ts  package-lock.json  package.json  playwright.config.ts  vitest.config.ts
frontend/app/: app.config.ts  app.vue
frontend/app/components/: Entry.test.ts  Entry.vue  EntryPlugins.vue  PluginStatusHeader.vue  TagEditor.test.ts  TagEditor.vue  (+3 more)
frontend/stores/: logsStore.test.ts  logsStore.ts  pluginStore.test.ts  pluginStore.ts  plugins.ts  sequenceStore.test.ts  sequenceStore.ts
(+17 files in other folders)
