[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[dependencies]
notify = "8.2.0"
rocket = { version = "0.5.1", features = ["json"] }
tokio = "1.48.0"
tracing = { version = "0.1.43", features = [] }
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
diesel = { version = "2.3.5", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15.7"
tracing-appender = "0.2.4"
deadpool-diesel = { version = "0.6.1", features = [
    "postgres",
    "rt_tokio_1",
    "tracing",
] }
diesel-async = { version = "0.7.4", features = ["postgres"] }
deadpool = "0.12.3"
tokio-stream = "0.1.18"
chrono = { version = "0.4.43", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"

[features]
debug = []
