[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[lib]
name = "backend"
path = "src/lib.rs"

[[bin]]
name = "backend"
path = "src/main.rs"

[target.'cfg(target_os = "windows")'.dependencies]
pq-sys = { version = "0.7.5", features = ["bundled"] }

[dependencies]
pyo3 = { version = "0.27", features = ["auto-initialize"] }
notify = "8.2.0"
rocket = { version = "0.5.1", features = ["json"] }
tokio = { version = "1.49.0", features = ["process", "io-util", "time", "sync", "rt"] }
tracing = { version = "0.1.43", features = [] }
tracing-subscriber = "0.3.22"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
diesel = { version = "2.3.5", features = ["postgres", "chrono", "serde_json"] }
dotenvy = "0.15.7"
tracing-appender = "0.2.4"
deadpool-diesel = { version = "0.6.1", features = [
    "postgres",
    "rt_tokio_1",
    "tracing",
] }
diesel-async = { version = "0.7.4", features = ["postgres"] }
deadpool = "0.12.3"
tokio-stream = "0.1.18"
chrono = { version = "0.4.43", features = ["serde"] }
walkdir = "2.5.0"

[dev-dependencies]
# Testing dependencies
tokio-test = "0.4"

[features]
debug = []
